--- a/index.html
+++ b/index.html
@@ -944,8 +944,10 @@
 
                     <!--        <img class="pull-left " src="img/box-logo.png" style="height:50px" alt="IHTSDO delivering SNOMED, the global clinical terminology"> -->
                     <a class="navbar-brand" href="javascript:void(0);" onclick="initialize();" id="navBarBrand">
-                        <strong>
-                            &nbsp;&nbsp;IHTSDO SNOMED CT Browser</strong></a>
+                        <img style="height: 30px;display: inline-block;margin-top: -5px;" src="img/ama-logo.png">
+                        <!--<strong>-->
+                            <!--&nbsp;&nbsp;IHTSDO SNOMED CT Browser</strong>-->
+                    </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-left: 20px; padding-right: 20px;">
