--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
         <script src="external-libs/notify.js"></script>
         <script src="external-libs/popover-extra-placements.js" type="text/javascript"></script>
 
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/jquery.splitter.css">
         <link rel="stylesheet" href="css/jquery-ui-1.10.4.custom.min.css">
         <link rel="stylesheet" href="css/bootstrap.min.base.12.css">
         <link rel="stylesheet" href="css/bootstrap-tour.css">
+        <link rel="stylesheet" href="css/bootstrap-theme.css">
+        <link rel="stylesheet" href="css/bootstrap-theme-custom.css">
         <link rel="stylesheet" href="css/popover-extra-placements.css">
         <link rel="stylesheet" href="css/animate.css">
 
@@ -944,7 +945,7 @@
 
                     <!--        <img class="pull-left " src="img/box-logo.png" style="height:50px" alt="IHTSDO delivering SNOMED, the global clinical terminology"> -->
                     <a class="navbar-brand" href="javascript:void(0);" onclick="initialize();" id="navBarBrand">
-                        <img style="height: 30px;display: inline-block;margin-top: -5px;" src="img/ama-logo.png">
+                        <img style="height: 50px;display: inline-block;margin-top: -5px;" src="img/ama-logo.png">
                         <!--<strong>-->
                             <!--&nbsp;&nbsp;IHTSDO SNOMED CT Browser</strong>-->
                     </a>
