Updated for CA browser

--- a/stats/stats-viewer-1/index.html
+++ b/stats/stats-viewer-1/index.html
@@ -923,7 +923,7 @@
                     var entries = allTextLines.shift().split(',');
                     var lines = [];
                     var headings = entries.splice(0, 7);
-                    console.log(headings);
+                    // console.log(headings);
                     while (allTextLines.length > 0) {
                         var textLine = allTextLines.shift();
                         entries = textLine.split(',');
@@ -939,13 +939,13 @@
                     }
                     ;
                     var generalContent = [];
-                    console.log("lines length:" + lines.length);
+                    // console.log("lines length:" + lines.length);
                     $.each(lines, function (index, line) {
                         if (line.id != "138875005" && parseInt(line.Concepts) > 0) {
                             generalContent.push({label: line.term, value: parseInt(line.Concepts)});
                         }
                     });
-                    console.log("generalContent length:" + generalContent.length);
+                    // console.log("generalContent length:" + generalContent.length);
 
                     var pie = new d3pie("#pieChart", {
                         "header": {
