--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
         <link rel="stylesheet" href="css/popover-extra-placements.css">
         <link rel="stylesheet" href="css/animate.css">
 
-        <link rel="stylesheet" href="snomed-interaction-components/css/snomed-interaction-components-1.33.0.min.css">
+        <link rel="stylesheet" href="snomed-interaction-components/css/snomed-interaction-components-1.37.0.min.css">
 
-        <script src="snomed-interaction-components/js/snomed-interaction-components-1.33.0.min.js"></script>
+        <script src="snomed-interaction-components/js/snomed-interaction-components-1.37.0.min.js"></script>
         <!--<script src="snomed-interaction-components/js/templates.js"></script>-->
         <script src="external-libs/jquery.history.js"></script>
         <script src="external-libs/ZeroClipboard.js"></script>
+        <script src="external-libs/clipboard.min.js"></script>
+
 
         <script>
             $(function () {
