Added left top logo option

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
             var selectedLanguage = config.selectedLanguage;
             var selectedFlag = config.selectedFlag;
             var currentPerspective = "home";
-            var selectedLogo = config.selectedLogo;
+            var selectedRightLogo = config.selectedRightLogo;
+            var selectedLeftLogo = config.selectedLeftLogo;
             var copyrightText = config.copyrightText;
             var bussinesLink = config.bussinesLink;
             var statsButtons = config.statsButtons;
@@ -910,14 +911,23 @@
 
                     <!--        <img class="pull-left " src="img/box-logo.png" style="height:50px" alt="IHTSDO delivering SNOMED, the global clinical terminology"> -->
                     <a class="navbar-brand" href="javascript:void(0);" onclick="initialize();" id="navBarBrand">
-                        <strong>
-                            &nbsp;&nbsp;IHTSDO SNOMED CT Browser</strong></a>
+                     <script>
+                        var titleWrapper = document.getElementById("navBarBrand");
+                        var myHTML = '';
+                        if(selectedLeftLogo === ""){
+                            myHTML+= '<strong>&nbsp;&nbsp;IHTSDO SNOMED CT Browser</strong></a>';
+                        } else {
+                            myHTML+= '<img style="height: 50px;display: inline-block;margin-top: -5px;" src="' + selectedLeftLogo + '"></a>';
+                        }
+                        titleWrapper.innerHTML = myHTML;
+                    </script>
+
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-left: 20px; padding-right: 20px;">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="navbar-btn" id="edition-selector">
-                            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
+                            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" style="margin-top: -28px;">
                                 <span class="i18n" data-i18n-id="i18n_release">Release</span>:&nbsp;<span id="editionLabel" class="releaseName"></span> <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu">
@@ -974,8 +984,8 @@
                         <li>
                             <p class="pull-right"><a id="logoLink" target="_blank"><img id="logo" class="pull-right visible-lg"src="" alt="logo"></a>
                             <script>
-                                if(selectedLogo !== ""){
-                                    document.getElementById('logo').src = selectedLogo;
+                                if(selectedRightLogo !== ""){
+                                    document.getElementById('logo').src = selectedRightLogo;
                                 } else {
                                     document.getElementById('logo').src = "/img/newlogo.png";
                                 }
