--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
             function start() {
                 // Read parameters
                 // countryIcons["5631000179106"] = "uy";
+                countryIcons["3881000207102"] = "ama";
                 $(function() {
                     $.extend($.fn.disableTextSelect = function() {
                         return this.each(function() {
